modelagem de classes básica e fetch que retorna lista de produtos

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/src/css/reset.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="/src/css/style.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="../src/css/reset.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="../src/css/style.css" media="screen" />
     <title>KenzieFood</title>
 </head>
 <body>
@@ -19,7 +19,9 @@
     <div class="container-carrinho">
 
     </div>
-
- <script src="/src/js/script.js"></script>   
+ <script src="../src/js/shoppingCart.js"></script>   
+ <script src="../src/js/product.js"></script>   
+ <script src="../src/js/apiClass.js"></script>   
+ <script src="../src/js/script.js"></script>   
 </body>
 </html>
