--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,14 @@
     <div class="container-carrinho">
         <div class="carrinho"> <img src="img/.png" alt=""> <h3>Carrinho</h3></div>
         <ul>
-            
+            <div class="carrinho-no-product">
+                <div class="carrinho-desenho-caixa">
+                    <div class="carrinho-desenho-dentro-da-caixa"></div>
+                </div>
+                <h2>Ops!</h2>
+                <p>Por enquanto não temos produtos no carrinho</p>
+            </div>
+<!--             
             <li class="carrinho-product"><img src="img/unsplash_eeqbbemH9-c.png" alt="">
                 <div class="carrinho-product-description">
                     <h2>Panqueca de banana... <button><img src="img/trash.png" alt=""></button></h2>
@@ -37,7 +44,7 @@
                     <p>R$ 20,00</p>
                 </div>
             </li>
-           
+            -->
 
         </ul>
         <div class="quantidade"><h2>Quantidade</h2> <p>0</p></div>
