--- a/src/index.html
+++ b/src/index.html
@@ -26,21 +26,11 @@
                 <h2>Ops!</h2>
                 <p>Por enquanto não temos produtos no carrinho</p>
             </div>
-<!--             
+<!--             estrutura das li do carrinho
             <li class="carrinho-product"><img src="img/unsplash_eeqbbemH9-c.png" alt="">
                 <div class="carrinho-product-description">
                     <h2>Panqueca de banana... <button><img src="img/trash.png" alt=""></button></h2>
                     <span>Panificadora</span>
-                    <p>R$ 20,00</p>
-                </div>
-            </li>
-            
-
-           
-            <li class="carrinho-product"><img src="img/unsplash_lK1Q5RyD6tc.png" alt="">
-                <div class="carrinho-product-description">
-                    <h2>Mousse de morango... <button><img src="img/trash.png" alt=""></button></h2>
-                    <span>Frutas</span>
                     <p>R$ 20,00</p>
                 </div>
             </li>
