feat: layout products

--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,78 @@
     <title>KenzieFood</title>
 </head>
 <body>
-    <header class="header"></header>
-    <div class="container-pesquisa">
-
-    </div>
+    
+    <div id = "container-pesquisa" class="container-pesquisa"> 
+        <header class="header"><h1>Kenzie Food</h1></header>
+        <form id="form-search" class="form-search">
+            <input type="search" name="search" id="input-search" class="input-search" placeholder="Pesquisar por produto">
+            <button id="button-search" class="button-search"></button>
+        </form>
+       
+    </div>  
     <div class="container-produtos">
-
+        <nav id="nav-filters" class="nav-filters">
+            <button class="button-filter-all">Todos</button> 
+            <button class="button-filter-bakery">Panificadora</button> 
+            <button class="button-filter-fruits">Frutas</button> 
+            <button class="button-filter-drinks">Bebidas</button>
+        </nav>
+        <ul class="list-products">
+            <li class="products">
+                <img src="./Frame 5.png" alt="" class="products-img">
+                <h2 class="products-title">Lorem ipsum dolor sit amet consectetur</h2>
+                <p class="products-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus impedit </p>
+                <div class="div-buy">
+                    <span class="produtcts-price">R$ 20,00</span>
+                    <button class="button-add-cart"></button>
+                </div>
+            </li>
+            <li class="products">
+                <img src="./Frame 5.png" alt="" class="products-img">
+                <h2 class="products-title">Lorem ipsum dolor sit amet consectetur</h2>
+                <p class="products-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus impedit </p>
+                <div class="div-buy">
+                    <span class="produtcts-price">R$ 20,00</span>
+                    <button class="button-add-cart"></button>
+                </div>
+            </li>
+            <li class="products">
+                <img src="./Frame 5.png" alt="" class="products-img">
+                <h2 class="products-title">Lorem ipsum dolor sit amet consectetur</h2>
+                <p class="products-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus impedit </p>
+                <div class="div-buy">
+                    <span class="produtcts-price">R$ 20,00</span>
+                    <button class="button-add-cart"></button>
+                </div>
+            </li>
+            <li class="products">
+                <img src="./Frame 5.png" alt="" class="products-img">
+                <h2 class="products-title">Lorem ipsum dolor sit amet consectetur</h2>
+                <p class="products-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus impedit </p>
+                <div class="div-buy">
+                    <span class="produtcts-price">R$ 20,00</span>
+                    <button class="button-add-cart"></button>
+                </div>
+            </li>
+            <li class="products">
+                <img src="./Frame 5.png" alt="" class="products-img">
+                <h2 class="products-title">Lorem ipsum dolor sit amet consectetur</h2>
+                <p class="products-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus impedit </p>
+                <div class="div-buy">
+                    <span class="produtcts-price">R$ 20,00</span>
+                    <button class="button-add-cart"></button>
+                </div>
+            </li>
+            <li class="products">
+                <img src="./Frame 5.png" alt="" class="products-img">
+                <h2 class="products-title">Lorem ipsum dolor sit amet consectetur</h2>
+                <p class="products-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus impedit </p>
+                <div class="div-buy">
+                    <span class="produtcts-price">R$ 20,00</span>
+                    <button class="button-add-cart"></button>
+                </div>
+            </li>
+        </ul>
     </div>
     <div class="container-carrinho">
 
