feat: Layout Products DOM

--- a/src/index.html
+++ b/src/index.html
@@ -28,8 +28,8 @@
             <button class="button-filter-fruits">Frutas</button> 
             <button class="button-filter-drinks">Bebidas</button>
         </nav>
-        <ul class="list-products">
-            <li class="products">
+        <ul id="list-products" class="list-products">
+            <!-- <li class="products">
                 <img src="./Frame 5.png" alt="" class="products-img">
                 <h2 class="products-title">Lorem ipsum dolor sit amet consectetur</h2>
                 <p class="products-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus impedit </p>
@@ -82,7 +82,7 @@
                     <span class="produtcts-price">R$ 20,00</span>
                     <button class="button-add-cart"></button>
                 </div>
-            </li>
+            </li> -->
         </ul>
     </div>
     <div class="container-carrinho">
