metodos da classe funcionando

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/src/css/reset.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="/src/css/style.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="../src/css/reset.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="../src/css/style.css" media="screen" />
     <title>KenzieFood</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
     </div>
     <div class="container-carrinho">
         <div class="carrinho"> <img src="img/.png" alt=""> <h3>Carrinho</h3></div>
-        <ul>
+        <ul class="ul-carrinho">
             <div class="carrinho-no-product">
                 <div class="carrinho-desenho-caixa">
                     <div class="carrinho-desenho-dentro-da-caixa"></div>
@@ -40,7 +40,9 @@
         <div class="quantidade"><h2>Quantidade</h2> <p>0</p></div>
         <div class="total"><h2>Total</h2> <p>R$0,00</p></div>
     </div>
-
- <script src="/src/js/script.js"></script>   
+ <script src="../src/js/shoppingCart.js"></script>   
+ <script src="../src/js/product.js"></script>   
+ <script src="../src/js/apiClass.js"></script>   
+ <script src="../src/js/script.js"></script>   
 </body>
 </html>
