Funçoes de quantidade e preço funcionando

--- a/src/index.html
+++ b/src/index.html
@@ -106,8 +106,8 @@
             -->
 
         </ul>
-        <div class="quantidade"><h2>Quantidade</h2> <p>0</p></div>
-        <div class="total"><h2>Total</h2> <p>R$0,00</p></div>
+        <div class="quantidade"><h2>Quantidade</h2> <p id="quantidade">0</p></div>
+        <div class="total"><h2>Total</h2> <p id="price">R$0,00</p></div>
     </div>
 
 
