--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
  
     <div class="container-produtos">
         <nav id="nav-filters" class="nav-filters">
-            <button class="button-filter-all">Todos</button> 
+            <button id="button-filter-all" class="button-filter-all">Todos</button> 
             <button class="button-filter-bakery">Panificadora</button> 
             <button class="button-filter-fruits">Frutas</button> 
             <button class="button-filter-drinks">Bebidas</button>
