main content finished

--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,14 @@
         <header class="header">
             <div class="container-logo">
                 <figure>
-                    <img src="../src/assets/logo.png" alt="Logo ícone KenzieFood">
+                    <img src="../src/assets/logo-icon.png" alt="Logo ícone KenzieFood">
                     <figcaption>Logo Kenzie-food</figcaption>
                 </figure>
-                <h1>Kenzie Food</h1>
+                <figure>
+                    <img src="../src/assets/logo.png" alt="Logo KenzieFood">
+                    <figcaption>Logo escrito Kenzie-food</figcaption>
+                </figure>
+                
             </div>
             <div id = "container-pesquisa" class="container-pesquisa"> 
                 <form id="form-search" class="form-search">
@@ -40,9 +44,27 @@
     <div class="container-produtos">
         <nav id="nav-filters" class="nav-filters">
             <button id="button-filter-all" class="button-filter-all">Todos</button> 
-            <button class="button-filter-bakery">Panificadora</button> 
-            <button class="button-filter-fruits">Frutas</button> 
-            <button class="button-filter-drinks">Bebidas</button>
+            <button class="button-filter-bakery">
+                <figure>
+                    <img src="../src/assets/panificadora.png" alt="Ícone de pão">
+                    <figcaption>Ícone de pão</figcaption>
+                </figure>
+                Panificadora
+            </button> 
+            <button class="button-filter-fruits">
+                <figure>
+                    <img src="../src/assets/frutas.png" alt="Ícone de frutas">
+                    <figcaption>Ícone de frutas</figcaption>
+                </figure>
+                Frutas
+            </button> 
+            <button class="button-filter-drinks">
+                <figure>
+                    <img src="../src/assets/bebidas.png" alt="Ícone de bebidas">
+                    <figcaption>Ícone de bebidas</figcaption>
+                </figure>
+                Bebidas
+            </button>
         </nav>
         <ul id="list-products" class="list-products">
             <!-- <li class="products">
