--- a/src/index.html
+++ b/src/index.html
@@ -127,9 +127,10 @@
         <div class="carrinho"> <img src="img/.png" alt=""> <h3>Carrinho</h3></div>
         <ul class="ul-carrinho">
             <div class="carrinho-no-product">
-                <div class="carrinho-desenho-caixa">
-                    <div class="carrinho-desenho-dentro-da-caixa"></div>
-                </div>
+                <figure>
+                    <img src="../src/assets/shopping-bag.png" alt="Ícone sacola de compras">
+                    <figcaption>Ícone sacola de compras</figcaption>
+                </figure>
                 <h2>Ops!</h2>
                 <p>Por enquanto não temos produtos no carrinho</p>
             </div>
@@ -145,7 +146,7 @@
 
         </ul>
         <div class="quantidade"><h2>Quantidade</h2> <p id="quantidade">0</p></div>
-        <div class="total"><h2>Total</h2> <p id="price">R$0,00</p></div>
+        <div class="total"><h2>Total</h2> <p id="price">R$ 0,00</p></div>
     </div>
 
 
