layout 320px fiz

--- a/src/index.html
+++ b/src/index.html
@@ -27,10 +27,10 @@
                 <form id="form-search" class="form-search">
                     <input type="search" name="search" id="input-search" class="input-search" placeholder="Pesquisar por produto">
                     <button id="button-search" class="button-search">
-                        <figure>
+                        <!-- <figure>
                             <img src="../src/assets/search-icon.png" alt="Ícone de pesquisa">
                             <figcaption>Ícone de pesquisa</figcaption>
-                        </figure>
+                        </figure> -->
                     </button>
                 </form>
             </div> 
@@ -145,8 +145,8 @@
             -->
 
         </ul>
-        <div class="quantidade"><h2>Quantidade</h2> <p id="quantidade">0</p></div>
-        <div class="total"><h2>Total</h2> <p id="price">R$ 0,00</p></div>
+        <div class="quantidade hide"><h2>Quantidade</h2> <p id="quantidade">0</p></div>
+        <div class="total hide"><h2>Total</h2> <p id="price">R$ 0,00</p></div>
     </div>
 
 
