--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../src/css/reset.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="../src/css/style.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="src/css/reset.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="src/css/style.css" media="screen" />
     <title>KenzieFood</title>
 </head>
 <body>
         <header class="header">
             <div class="container-logo">
                 <figure>
-                    <img src="../src/assets/logo-icon.png" alt="Logo ícone KenzieFood">
+                    <img src="src/assets/logo-icon.png" alt="Logo ícone KenzieFood">
                     <figcaption>Logo Kenzie-food</figcaption>
                 </figure>
                 <figure>
-                    <img src="../src/assets/logo.png" alt="Logo KenzieFood">
+                    <img src="src/assets/logo.png" alt="Logo KenzieFood">
                     <figcaption>Logo escrito Kenzie-food</figcaption>
                 </figure>
                 
@@ -39,21 +39,21 @@
             <button id="button-filter-all" class="button-filter-all">Todos</button> 
             <button class="button-filter-bakery">
                 <figure>
-                    <img src="../src/assets/panificadora.png" alt="Ícone de pão">
+                    <img src="src/assets/panificadora.png" alt="Ícone de pão">
                     <figcaption>Ícone de pão</figcaption>
                 </figure>
                 Panificadora
             </button> 
             <button class="button-filter-fruits">
                 <figure>
-                    <img src="../src/assets/frutas.png" alt="Ícone de frutas">
+                    <img src="src/assets/frutas.png" alt="Ícone de frutas">
                     <figcaption>Ícone de frutas</figcaption>
                 </figure>
                 Frutas
             </button> 
             <button class="button-filter-drinks">
                 <figure>
-                    <img src="../src/assets/bebidas.png" alt="Ícone de bebidas">
+                    <img src="src/assets/bebidas.png" alt="Ícone de bebidas">
                     <figcaption>Ícone de bebidas</figcaption>
                 </figure>
                 Bebidas
@@ -121,7 +121,7 @@
         <ul class="ul-carrinho">
             <div class="carrinho-no-product">
                 <figure>
-                    <img src="../src/assets/shopping-bag.png" alt="Ícone sacola de compras">
+                    <img src="src/assets/shopping-bag.png" alt="Ícone sacola de compras">
                     <figcaption>Ícone sacola de compras</figcaption>
                 </figure>
                 <h2>Ops!</h2>
@@ -142,9 +142,9 @@
         <div class="total hide"><h2>Total</h2> <p id="price">R$ 0,00</p></div>
     </div>
 </div>
- <script src="../src/js/shoppingCart.js"></script>   
- <script src="../src/js/product.js"></script>   
- <script src="../src/js/apiClass.js"></script>   
- <script src="../src/js/script.js"></script>   
+ <script src="src/js/shoppingCart.js"></script>   
+ <script src="src/js/product.js"></script>   
+ <script src="src/js/apiClass.js"></script>   
+ <script src="src/js/script.js"></script>   
 </body>
 </html>
